--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
             button.addEventListener("click", mouseClick, false);
             const painter = c.getContext("2d", { alpha: false });
             //painter.scale(32 / spriteSize, 32 / spriteSize);
-            painter.translate(8, 8);
+            var rendererOffset = 8;
+            painter.translate(rendererOffset, rendererOffset);
             painter.imageSmoothingEnabled = false;
 
             const width = c.width;
@@ -499,7 +500,8 @@
                         for (var j = 0; j < prompts[i].elements.length; j++) {
                             if (pointerX > prompts[i].posx + 10 && pointerX < prompts[i].posx + prompts[i].width - 20) {
                                 // within element horizontally
-                                if (pointerY > 10 + prompts[i].posy + (j + 2) * 25 && pointerY < 35 + prompts[i].posy + (j + 2) * 25) {
+                                console.log(30 * j + prompts[i].posy + ", " + (30 * j + (prompts[i].posy + 20)));
+                                if (pointerY >= 30 * (j + 1) + prompts[i].posy && pointerY <= 30 * (j + 1) + (prompts[i].posy + 20)) {
                                     // within element vertically
                                     console.log("here");
 
@@ -511,13 +513,12 @@
                             }
                         }
                         console.log(pointerX + ", " + pointerY);
-                        drawRect(prompts[i].posx + 10, prompts[i].posy + 10, 20, 10, 255, 255, 255);
-
+                        console.log(prompts[i].posx + 10);
                         if (
                             pointerX >= prompts[i].posx + 10 &&
                             pointerX <= prompts[i].posx + 40 &&
-                            pointerY >= prompts[i].posy + 40 &&
-                            pointerY <= prompts[i].posy + 60
+                            pointerY >= prompts[i].posy + 10 &&
+                            pointerY <= prompts[i].posy + 30
                         ) {
                             prompts[i] = null;
                             renderMap();
@@ -937,8 +938,8 @@
                 const rect = target.getBoundingClientRect();
                 var wRatio = (rect.right - rect.left) / width;
                 var hRatio = (rect.bottom - rect.top) / height;
-                pointerX = (event.pageX - rect.left) / wRatio;
-                pointerY = (event.pageY - rect.top) / hRatio;
+                pointerX = (event.pageX - rect.left) / wRatio - window.scrollX;
+                pointerY = (event.pageY - rect.top) / hRatio - window.scrollY;
             };
 
             setup();
